css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;

  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  font-family: "PT Sans", sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

.img-flex {
  display: block;
  width: 100%;
}

.banner {
  position: relative;
}

.banner-content {
  color: #fff;
  position: absolute;
  bottom: 0;
  z-index: 10000;
  overflow: hidden;
}

